<resources>
    <string name="app_name">Pouce d\'Or</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_my">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="accept">Accept</string>
    <string name="add_account">Add Account</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="add_to_schedule_desc">Button to add session to your schedule</string>
    <string name="all_sessions">All Sessions</string>
    <string name="all_themes">All Themes</string>
    <string name="all_topics">All Topics</string>
    <string name="all_types">All Types</string>
    <string name="all_years">All Years</string>
    <string name="attending_in_person">In Person</string>
    <string name="attending_remotely">Remotely</string>
    <string name="browse_events">Browse events</string>
    <string name="browse_sessions">Browse sessions...</string>
    <string name="calltoaction_wifi_configure"><![CDATA[
        <br><br>Tap \'Add Wi-Fi Network\' to proceed.
    ]]></string>
    <string name="calltoaction_wifi_settings"><![CDATA[
        <br><br>Tap \'Open Wi-Fi Settings\' to enable Wi-Fi.
    ]]></string>
    <string name="close_detail_pane">Close detail pane</string>
    <string name="cancel">Cancel</string>
    <string name="data_stale_warning">The data you are viewing may be out of date.</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_tomorrow">Tomorrow</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="decline">Decline</string>
    <string name="description_about">About</string>
    <string name="description_add_schedule">Add to schedule</string>
    <string name="description_app_feedback">App Feedback</string>
    <string name="description_app_feedback_old">Feedback</string>
    <string name="description_captions">Captions</string>
    <string name="description_configure_wifi">Configure Wi-Fi</string>
    <string name="description_debug" translatable="false">Debug and tests</string>
    <string name="description_i_o_extended">I/O Extended</string>
    <string name="description_map">Map</string>
    <string name="description_presentation">Toggle Screen Output</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_remove_schedule">Remove from schedule</string>
    <string name="description_search">Search</string>
    <string name="description_settings">Settings</string>
    <string name="description_setup_wifi_body"><![CDATA[
        Since you\'re attending in person, we can set up this device to access the conference Wi-Fi network (5Ghz only).
        By configuring your Wi-Fi now, you\'ll help prevent network congestion.
    ]]></string>
    <string name="description_share">Share</string>
    <string name="description_social_stream">View Google+ stream</string>
    <string name="empty_captions">No captions found for this session.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="empty_sessions">No sessions found.</string>
    <string name="empty_waiting_for_sync">Waiting for sync&#8230;</string>
    <string name="empty_widget_text">No more upcoming sessions.\nSee you next year!</string>
    <string name="empty_widget_text_signed_out">Touch the Google I/O 2014 logo above to sign in and begin using the app.</string>
    <string name="ended_sessions">Ended sessions</string>
    <string name="experts_directory_all_cities">All cities</string>
    <string name="experts_directory_all_countries">All countries</string>
    <string name="experts_directory_attending">attending I/O</string>
    <string name="experts_directory_header_body">The Google Developer Experts (GDE) title recognizes the outstanding developers who exhibit great expertise in one or more Google technologies and share it with the developer community. GDEs are gurus, mentors and evangelists; they create tutorials, code samples, and write books and blogs; they publish videos, drive community projects, and present at events large and small. These independent developers bring their real-world experience and knowledge working with Google technologies to developer communities worldwide.</string>
    <string name="experts_directory_header_dismiss">Got it</string>
    <string name="experts_directory_header_title">Who are the Google Developers Experts?</string>
    <string name="explore_attending_in_person_toast">Attending I/O in person (you can change this in Settings)</string>
    <string name="explore_attending_remotely_toast">Attending I/O remotely (you can change this in Settings)</string>
    <string name="give_feedback">Yes</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="google_account_required_message">To use this application, you must have at least one Google account on your device.</string>
    <string name="google_account_required_title">Google Account Required</string>
    <string name="got_it">Got it</string>
    <string name="io14_hashtag" translatable="false">#io14</string>
    <string name="live_available">LIVE</string>
    <string name="live_now">LIVE NOW</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login_failed_text">Could not sync your sessions due to an error.</string>
    <string name="login_failed_text_retry">Retry</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mandatory_update_error">Your application is out of date. You must upgrade it to continue to use it.</string>
    <string name="update_available">There is a newer version of this application available on Google Play.</string>
    <string name="map_at">At %1$s:<![CDATA[<br><b>%2$s</b>]]></string>
    <string name="map_floorcontrol_1" translatable="false">1</string>
    <string name="map_floorcontrol_2" translatable="false">2</string>
    <string name="map_floorcontrol_3" translatable="false">3</string>
    <string name="map_infowindow_text_empty">-</string>
    <string name="map_infowindow_partner_seemore">Touch to see more details</string>
    <string name="map_nearby_button">Nearby</string>
    <string name="map_now_playing">Now playing:<![CDATA[<br><b>%1$s</b>]]></string>
    <string name="map_touch_to_see_session">Touch to see Sessions</string>
    <string name="map_label_moscone" translatable="false">Moscone Center</string>
    <string name="more_information">More information</string>
    <string name="more_sessions">More Sessions</string>
    <string name="navdrawer_item_experts_directory">Experts</string>
    <string name="navdrawer_item_experts_directory_a11y">Experts Directory</string>
    <string name="navdrawer_item_explore">Explore</string>
    <string name="navdrawer_item_explore_a11y">Explore Google I/O</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="navdrawer_item_ranking">Ranking</string>
    <string name="navdrawer_item_alert">Alert</string>
    <string name="navdrawer_item_log_out">Log Out</string>
    <string name="navdrawer_item_my_schedule">My Schedule</string>
    <string name="navdrawer_item_people_ive_met">People I\'ve Met</string>
    <string name="navdrawer_item_people_ive_met_a11y">People I\'ve Met</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_sign_in">Sign in</string>
    <string name="navdrawer_item_social">Social</string>
    <string name="navdrawer_item_video_library">Video library</string>
    <string name="navdrawer_status_attending_in_person">Attending I/O in person</string>
    <string name="navdrawer_status_attending_remotely">Attending I/O remotely</string>
    <string name="nearby_eula_header">PhysicalWeb Experiment</string>
    <string name="physicalweb_intro_title">PhysicalWeb Experiment</string>
    <string name="physicalweb_intro_text">This tab can show you links to content related to the conference features near your current location (e.g., partner websites, apps, demos and interactive content). To do this, the app will perform a Bluetooth LE scan of your surroundings to look for tags and send that information to a Google server for processing. Once activated, this will continue for the duration of the event, as long as your device has Bluetooth turned on. If you want to turn the feature off, visit the app\'s Settings menu or deactivate Bluetooth on the device. Keep in mind this is just an experiment with BLE, not a full product, so there may be some rough edges! It may not work if there is poor or no network connection, or if there is too much interference.\n\nWould you like to enable this feature now?</string>
    <string name="physical_web_bluetooth_off">This feature requires Bluetooth, but your device\'s Bluetooth is turned off. To use this feature, please enable Bluetooth in your device\'s Settings screen.</string>
    <string name="no_nearby_urls">There are no PhysicalWeb beacons in your area. Try again when you are near a point of interest at Moscone during the conference.</string>
    <string name="no_connection_cant_login">Can\'t sign in. Check your network connection.</string>
    <string name="no_matching_partner">No matching partner.</string>
    <string name="no_matching_sessions">No matching sessions.</string>
    <string name="no_matching_sessions_in_interval">No sessions available in this time slot.</string>
    <string name="no_matching_videos">No matching videos.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="not_now">Not now</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="ok">OK</string>
    <string name="others">Others</string>
    <string name="partners">Partners</string>
    <string name="people_ive_met_delete">Delete</string>
    <string name="people_ive_met_delete_confirmation">Are you sure you want to delete this person from the list?</string>
    <string name="people_ive_met_edit_note_title">Notes</string>
    <string name="people_ive_met_empty">You haven\'t scanned anyone\'s badge yet. When you wish to exchange contact information with another attendee, hold your device over their badge for a few seconds and their Google+ profile will be added to this list (requires NFC).</string>
    <string name="people_ive_met_header">Attendees whose badges you have scanned:</string>
    <string name="people_ive_met_note">Note</string>
    <string name="people_ive_met_dummy_badge">This badge does not contain a link to a Google+ profile</string>
</resources>