<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navdrawer_item_map"
            android:icon="@drawable/ic_drawer_map"
            android:title="@string/navdrawer_item_map" />
        <item
            android:id="@+id/navdrawer_item_ranking"
            android:icon="@drawable/ic_drawer_ranking"
            android:title="@string/navdrawer_item_ranking" />
        <item
            android:id="@+id/navdrawer_item_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/navdrawer_item_settings" />
        <item
            android:id="@+id/navdrawer_item_alert"
            android:icon="@drawable/ic_drawer_alert"
            android:title="@string/navdrawer_item_alert" />
        <item
            android:id="@+id/navdrawer_item_log_out"
            android:icon="@drawable/ic_drawer_log_out"
            android:title="@string/navdrawer_item_log_out" />
    </group>

</menu>
